# portfolio

./: .gitignore  Cargo.toml  LICENSE  READDME.md  README.md  handys.sh  run.sh  tailwind.config.js
public/: index.html  styles.css
src/: app.rs  main.rs
src/api/: health_service.rs  mod.rs
src/model/: mod.rs  template_names.rs
src/pages/: layout.html
src/router/: navigation.rs
static/: styles.css  websocket_hot_reload.js
static/pages/: arcade.hbs  index.hbs
