[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
rand = "0.8.5"
anyhow = "1.0.75"
# photic_macros = { path = "/Users/steen/Documents/GitHub/photic_macros" }

[dev-dependencies]
