[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10.0"
anyhow = "1.0.75"
handlebars = { version = "4.4.0", features = ["dir_source"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
dotenv = "0.15.0"

